# rev-tech

./: .gitignore
proof-of-concepts/jit-watcher/: go.mod  go.sum
tools/get-client-versions/: README.md  go.mod  go.sum  main.go
tools/teleport-api-scripts/: go.mod  go.sum
use-cases/ai/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
use-cases/ai/agents/: Dockerfile.agent-db  Dockerfile.agent-ssh  Dockerfile.general-agent  README.md  base_agent.py  pyproject.toml
use-cases/ai/agents/agent_db/: README.md  card.json  graph.py  main.py
use-cases/ai/agents/agent_ssh/: README.md  card.json  graph.py  main.py
use-cases/ai/agents/base_agent/: README.md  __init__.py  base_agent.py  llm.py
use-cases/ai/agents/general_agent/: Dockerfile  README.md  card.json  graph.py  main.py
use-cases/ai/agents/teleport/: __init__.py  discovery.py  tbot_config.py
use-cases/ai/frontend/: Dockerfile  README.md  main.py  pyproject.toml
use-cases/ai/frontend/.chainlit/: config.toml
use-cases/ai/frontend/public/: theme.css  theme.json
use-cases/ai/infra/: README.md
use-cases/ai/infra/docs/: demo-postgres-db-fixes.md
use-cases/ai/infra/k8s/: SETUP_GUIDE.md  agent-db-deployment.yaml.template  agent-db-discover-script.yaml  agent-db-tbot-init-config.yaml.template  agent-ssh-deployment.yaml.template  agent-ssh-tbot-init-config.yaml.template  cleanup.sh  llm-secret.yaml  namespace.yaml  orchestrator-deployment.yaml.template  orchestrator-discover-script.yaml  orchestrator-tbot-init-config.yaml.template  setup.sh
use-cases/ai/infra/k8s/scripts/: discover-and-configure.sh
use-cases/ai/infra/k8s/teleport-resources/: agent-db-bot-token.yaml  agent-db-bot-token.yaml.template  agent-db-role.yaml  agent-ssh-bot-token.yaml.template  agent-ssh-role.yaml  orchestrator-bot-token.yaml  orchestrator-bot-token.yaml.template  orchestrator-role.yaml
use-cases/ai/infra/teleport/: teleport-docker-compose.yaml
use-cases/ai/infra/teleport/persistence/etc/: teleport.yaml
use-cases/ai/infra/teleport/persistence/etc/roles/: db-access.yaml  mcp-access.yaml
use-cases/ai/infra/teleport/persistence/postgres/data/: initdb.sh  initdb.sql  pg_hba.conf
use-cases/ai/orchestrator/: Dockerfile  README.md  agents.json  graph.py  llm.py  main.py  pyproject.toml  tool_builder.py
use-cases/ai/scripts/: local-run.sh  seed-db.sql
use-cases/ai/teleport-gpt/: README.md  main.py  pyproject.toml
