[project]
name = "a2a-agents"
version = "0.1.0"
description = "A2A specialist agents and shared infrastructure"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
