[project]
name = "a2a-agents"
version = "0.1.0"
description = "A2A specialist agents and shared infrastructure"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]==0.3.24",
    "langgraph==1.0.10rc1",
    "langchain-core==1.2.22",
    "langchain-anthropic==1.3.3",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.10",
    "httpx==0.28.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
