[project]
name = "a2a-orchestrator"
version = "0.1.0"
description = "A2A multi-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    "a2a-agents",
    "a2a-sdk[http-server]==0.3.24",
    "langgraph==1.0.10rc1",
    "langchain-core==1.2.28",
    "langchain-anthropic==1.3.3",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.14",
    "httpx==0.28.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "structlog==25.5.0",
]

[tool.uv.sources]
a2a-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
